# webhomework7

learn7/: alembic.ini  models.py  my_select.py  pyproject.toml  seed.py
learn7/alembic/versions/: 3b7db0cecdb4_init.py
