[tool.poetry]
name = "learn7"
version = "0.1.0"
description = ""
authors = ["Taras <93609222+aps06@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.1"
sqlalchemy = "^2.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
